# Fyndr.AI

./: .gitignore  401_AUTHENTICATION_ERROR_FIXED.md  AI_JOB_FEED_DYNAMIC_INTEGRATION_COMPLETE.md  ALL_PROBLEMS_RESOLVED_FINAL.md  AUTHENTICATION_INFINITE_LOOP_FIXES_COMPLETE.md  COMPLETE_FRONTEND_DYNAMIC_INTEGRATION.md  COMPLETE_FRONTEND_DYNAMIC_INTEGRATION_FINAL.md  COMPREHENSIVE_JOB_SCRAPING_COMPLETE.md  DYNAMIC_REAL_TIME_IMPLEMENTATION_COMPLETE.md  FRONTEND_BACKEND_DYNAMIC_INTEGRATION_COMPLETE.md  FRONTEND_NAVIGATION_AND_DYNAMIC_CONTENT_FIXES.md  JOBSEEKER_ONBOARDING_PROFILE_MANAGEMENT_CHANGES.md  JOB_APPLICATIONS_IMPLEMENTATION.md  JOB_DETAIL_PAGINATION_FIXES_COMPLETE.md  JOB_DETAIL_VIEW_OBJECT_RENDERING_FIXES_COMPLETE.md  JOB_FEED_DATABASE_INTEGRATION.md  MERGE_REPORT.md  MISSING_EXPORT_ERROR_RESOLVED.md  MYWORKDAY_REAL_TIME_APPLICATION_COMPLETE.md  NAVIGATION.md  PAGE_INTEGRATION_GUIDE.md  PHASE_1_SUMMARY.md  PHASE_2_COMPLETE.md  PHASE_3_COMPLETE.md  PHASE_3_STEPS_8_9_COMPLETE.md  PHASE_4_COMPLETE.md  PROBLEM_RESOLUTION_COMPLETE.md  README.md  REAL_TIME_DYNAMIC_FEATURES.md  check-page-integration.ps1  fix-layouts.ps1  index.html  jsconfig.json  nohup.out  package-lock.json  package.json  tailwind.config.js  validate-integration.ps1  validate-merge.ps1
backend/: .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  conftest.py  create_test_token.py  debug_api.py  docker-compose.yml  manage.py  pyproject.toml  requirements-dev.txt  requirements-prod.txt  requirements.txt  test_api.py
backend/fyndr_auth/: models.py  serializers.py  urls.py  validators.py  views.py
backend/fyndr_auth/migrations/: 0001_initial.py  0002_remove_jobseekeronboarding_resume_url_and_more.py  0002_skills_roles_preferred_roles.py  0003_companyprofile_jobseekerprofile_recruiterprofile_and_more.py  0006_oauthtoken.py  (+36 more)
backend/fyndr_backend/: asgi.py  channels_jwt.py  settings.py  settings_test.py  urls.py  wsgi.py
backend/jobapplier/: apps.py  automation_runner.py  browser_automation.py  bulk_apply.py  consumers.py  models.py  real_time_service.py  routing.py  serializers.py  services.py  urls.py  views.py  workday_automation.py
backend/jobmatcher/: admin.py  ai_service.py  apps.py  automation.py  cover_letter_generator.py  dashboard.py  engine.py  models.py  packet_builder.py  resume_customizer.py  serializers.py  urls.py  views.py
backend/jobscraper/: __init__.py  admin.py  apps.py  base_scraper.py  job_parser.py  logo_scraper.py  models.py  permissions.py  serializers.py  services.py  simple_job_parser.py  tasks.py  urls.py  views.py
backend/jobtracker/: README.md  analytics.py  ats_sync.py  consumers.py  dynamic_tracker.py  email_parser.py  reminders.py  routing.py  urls.py  views.py
backend/team_management/: urls.py  views.py
(+456 files in other folders)
